# manage-scripts-for-nas-

./: .gitignore  .local.ipynb  .playground.ipynb  README.md  config.py  errors.txt  pyproject.toml  temp_file
src/: connection.py  delete_all_empty_folders.py  fs_operations.py  log.py  main.py
src/local_fs/: delete_all_empty_folders.py  run.py
src/nas_fs/: nas_fs_operations.py  run.py
test/: test_connection.py  test_fs_operations.py
test/local_fs/: test_local_fs_operations.py
test/nas_fs/: test_connection.py  test_nas_operations.py
